* implemented the calendar UI and functionalities

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,8 @@ pluginManagement {
         mavenCentral()
         maven { url 'https://jitpack.io' }
         gradlePluginPortal()
+        //noinspection JcenterRepositoryObsolete
+        jcenter()
     }
 }
 dependencyResolutionManagement {
@@ -12,6 +14,8 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
+        //noinspection JcenterRepositoryObsolete
+        jcenter()
     }
 }
 rootProject.name = "ToDo"
