--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,12 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.edit.EditTaskActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:configChanges="locale"/>
         <activity
             android:name=".ui.splash.SplashActivity"
-            android:exported="true">
+            android:exported="true"
+            android:configChanges="locale">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,7 +28,8 @@
         </activity>
         <activity
             android:name=".ui.home.HomeActivity"
-            android:exported="false"/>
+            android:exported="false"
+            android:configChanges="locale"/>
     </application>
 
 </manifest>
